# ONScripter-jh-Switch

./: .gitignore  .gitmodules  AGENTS.md  AnimationInfo.cpp  BUGList.md  BaseReader.h  CHANGELOG.md  Common.cpp  Common.h  DirectReader.cpp  FontInfo.cpp  Makefile  Makefile.ARMLinux  Makefile.GP2X  Makefile.Linux  Makefile.MacOSX  Makefile.PSP  Makefile.PSV  Makefile.Pandora  Makefile.Win  Makefile.WinCE  Makefile.iPhone  Makefile.iPodLinux  Makefile.nx  Makefile.nx2  Makefile.onscripter  Makefile.switch  ONScripter-Switch.nacp  ONScripter.cpp  ONScripter.h  ONScripter.json  ONScripter.npdm  ONScripter.nro.REMOVED.git-id  ONScripter.nso.REMOVED.git-id  ONScripter.nsp.REMOVED.git-id  ONScripter_animation.cpp  ONScripter_command.cpp  ONScripter_event.cpp  ONScripter_file.cpp  ONScripter_image.cpp  (+25 more)
.github/workflows/: build_switch.yml
SDL_kitchensink/: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  Targets.cmake  Toolchain.cmake  doxygen-custom.css  pkg-config.pc.in  sonar-project.properties
SDL_kitchensink/cmake/: FindSDL21111.cmake  Findass.cmake  Findffmpeg.cmake
SDL_kitchensink/examples/: example_audio.c  example_complex.c  example_custom.c  example_rwops.c  example_simple.c
SDL_kitchensink/include/kitchensink/: kitchensink.h  kitcodec.h  kitconfig.h  kiterror.h  kitformat.h  kitlib.h  kitplayer.h  kitsource.h  kitutils.h
SDL_kitchensink/include/kitchensink/internal/: kitdecoder.h  kitlibstate.h  libass.h
SDL_kitchensink/include/kitchensink/internal/audio/: kitaudio.h
SDL_kitchensink/include/kitchensink/internal/subtitle/: kitatlas.h  kitsubtitle.h  kitsubtitlepacket.h
SDL_kitchensink/include/kitchensink/internal/subtitle/renderers/: kitsubass.h  kitsubimage.h  kitsubrenderer.h
SDL_kitchensink/include/kitchensink/internal/utils/: kitbuffer.h  kithelpers.h  kitlog.h  kitringbuffer.h
SDL_kitchensink/include/kitchensink/internal/video/: kitvideo.h
SDL_kitchensink/src/: kiterror.c  kitlib.c  kitplayer.c  kitsource.c  kitutils.c
SDL_kitchensink/src/internal/: kitdecoder.c  kitlibstate.c  libass.c
SDL_kitchensink/src/internal/audio/: kitaudio.c
SDL_kitchensink/src/internal/subtitle/: kitatlas.c  kitsubtitle.c  kitsubtitlepacket.c
SDL_kitchensink/src/internal/subtitle/renderers/: kitsubass.c  kitsubimage.c  kitsubrenderer.c
SDL_kitchensink/src/internal/utils/: kitbuffer.c  kithelpers.c  kitringbuffer.c
SDL_kitchensink/src/internal/video/: kitvideo.c
build_switch/: AnimationInfo.d  DirectReader.d  DirtyRect.d  FontInfo.d  LUAHandler.d  NsaReader.d  ONScripter.d  ONScripter_animation.d  ONScripter_command.d  ONScripter_effect.d  ONScripter_effect_breakup.d  ONScripter_effect_cascade.d  ONScripter_effect_trig.d  ONScripter_event.d  ONScripter_file.d  ONScripter_file2.d  ONScripter_image.d  ONScripter_lut.d  ONScripter_rmenu.d  ONScripter_sound.d  ONScripter_text.d  Parallel.d  SarReader.d  ScriptHandler.d  ScriptParser.d  ScriptParser_command.d  coding2utf16.d  gbk2utf16.d  gles_renderer.d  layer_oldmovie.d  layer_snow.d  onscripter_main.d  onsyuri.lst  resize_image.d  sjis2utf16.d
include/: AnimationInfo.h  BaseReader.h  Common.h  GameBrowser.h  LUAHandler.h  ONScripter.h  Parallel.h  ScriptHandler.h  ScriptParser.h  Utils.h  coding2utf16.h  cursor_png.h  direct_draw.h  gbk2utf16.h  main.h  mouse_png.h  sjis2utf16.h  version.h
include/simd/: int8x16.inl
mpv/: .gitignore  CMakeLists.txt
mpv/switch/: config.h  ebml_defs.c  ebml_types.h  io.c  version.h  vo_tct.c
mpv/switch/input/: input_conf.h
mpv/switch/player/: builtin_conf.inc
mpv/switch/sub/: osd_font.h
mpv/switch/sys/: mman.h
romfs/: README.txt
simd/: int32x4.h  int8x16.h
source/: AnimationInfo.cpp  Common.cpp  FontInfo.cpp  GameBrowser.cpp  LUAHandler.cpp  ONScripter.cpp  ONScripter_event.cpp  ONScripter_image.cpp  ONScripter_text.cpp  Parallel.cpp  ScriptHandler.cpp  ScriptParser.cpp  ScriptParser_command.cpp  coding2utf16.cpp  layer_oldmovie.cpp  main.cpp  tempCodeRunnerFile
source/builtin_dll/: ONScripter_effect_cascade.cpp  ONScripter_effect_trig.cpp  layer_snow.cpp
source/onscripter/: ONScripter.cpp  ONScripter_animation.cpp  ONScripter_command.cpp  ONScripter_directdraw.cpp  ONScripter_effect.cpp  ONScripter_event.cpp  ONScripter_file.cpp  ONScripter_file2.cpp  ONScripter_image.cpp  ONScripter_rmenu.cpp  ONScripter_sound.cpp  ONScripter_text.cpp  onscripter_main.cpp
source/player/: ONScripter_video.cpp
source/reader/: Common.cpp  DirectReader.cpp  NsaReader.cpp  SarReader.cpp
source/renderer/: gles2funcs.h  gles_renderer.cpp  gles_renderer.h
source/renderer/shader/: post_cas.h
source/tools/: nsaconv.cpp  nsadec.cpp  nscriptdecode.cpp  sarconv.cpp  sardec.cpp
src/onsyuri/: DirectReader.cpp  GameBrowser.cpp  GameBrowser.h  ONScripter.cpp  ONScripter.h  ONScripter_animation.cpp  ONScripter_command.cpp  ONScripter_event.cpp  ONScripter_image.cpp  ONScripter_rmenu.cpp  ONScripter_sound.cpp  ScriptHandler.cpp  ScriptParser.h  ScriptParser_command.cpp  onscripter_main.cpp
src/onsyuri/simd/: int8x16.h
src/onsyuri_android/app/: AndroidManifest.xml
src/onsyuri_android/app/cpp/: CMakeLists.txt
src/onsyuri_android/app/java/com/yuri/onscripter/: ONScripter.java
src/onsyuri_android/gradle/wrapper/: gradle-wrapper.properties
src/onsyuri_web/: dummy.c  onsyuri.html  onsyuri_index.py
tests/: Makefile  README.md  game_browser_logic.h  mock_sdl.h  screen_logic.h  switch_input_logic.h  test_animation_info.cpp  test_coordinates.cpp  test_dirty_rect.cpp  test_encoding.cpp  test_font_layout.cpp  test_framework.h  test_game_browser.cpp  test_image_processing.cpp  test_lua_animation.cpp  test_main.cpp  test_rendering.cpp  test_screen_edge_cases.cpp  test_screen_scaling.cpp  test_switch_input.cpp  test_switch_paths.cpp  test_utf_conversion.cpp  test_utils.cpp
